# stack-machine

./: CMakeLists.txt  LICENSE
Documentation/: Documentaion.odt
Presentation/: Stack-Based Instruction Set architecture.pptx
src/: alu.hpp  factorial-recursive.txt  factorial-variable.txt  input.txt  io.hpp  machine.hpp  main  main.cpp  output.txt
visualisation/: index.html  output.txt  script.js
visualisation-html/: index.html  output.txt  script.js
visualisation-sdl/: output.txt  visualisation.cpp
